force-app/main/default/objects/OtherInfo__c/OtherInfo__c.object-meta.xml
<CustomObject>
    <label>Other Info</label>
    <nameField>
        <displayFormat>OI- {00000000}</displayFormat>
        <label>Other Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>