force-app/main/default/objects/OtherInfo__c/fields/Add_professional_contact_info__c.field-meta.xml
<CustomField>
    <fullName>Add_professional_contact_info__c</fullName>
    <label>Add professional contact info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Estate Agent</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>