force-app/main/default/objects/OtherInfo__c/fields/Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted__c</fullName>
    <formula>Expected_Net_Procuration_Fee__c + Broker_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expected Net Procuration Fee + Broker Fee</inlineHelpText>
    <label>Application Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>