force-app/main/default/objects/OtherInfo__c/fields/Broker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee__c</fullName>
    <label>Broker Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>