force-app/main/default/objects/OtherInfo__c/fields/Date_the_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_the_Payment_Received__c</fullName>
    <label>Date the Payment Received</label>
    <type>Date</type>
</CustomField>