force-app/main/default/objects/OtherInfo__c/fields/Expected_Net_Procuration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Expected_Net_Procuration_Fee__c</fullName>
    <label>Expected Net Procuration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>