force-app/main/default/objects/OtherInfo__c/fields/Gross_Procuration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Gross_Procuration_Fee__c</fullName>
    <label>Gross Procuration Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>