force-app/main/default/objects/OtherInfo__c/fields/Mortgage_Completed__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Completed__c</fullName>
    <formula>Net_Procuration_Fee__c + Broker_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Procuration Fee + Broker Fee</inlineHelpText>
    <label>Mortgage Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>