force-app/main/default/objects/OtherInfo__c/fields/Name_Of_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Bank__c</fullName>
    <label>Name Of Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>