force-app/main/default/objects/OtherInfo__c/fields/Net_Fee__c.field-meta.xml
<CustomField>
    <fullName>Net_Fee__c</fullName>
    <label>Net Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>