force-app/main/default/objects/OtherInfo__c/fields/Net_Procuration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Net_Procuration_Fee__c</fullName>
    <label>Net Procuration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>