force-app/main/default/objects/OtherInfo__c/fields/Time_With_Bank__c.field-meta.xml
<CustomField>
    <fullName>Time_With_Bank__c</fullName>
    <label>Time With Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>